[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Controls.gd" type="Script" id=1]
[ext_resource path="res://Utils/PixelCanva.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.392157, 0.392157, 0.392157, 1 )
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.67451, 0.67451, 0.67451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 112, 304 )

[node name="ControlsMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 220.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 220.0
margin_bottom = 600.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 205.0
margin_bottom = 585.0
custom_constants/separation = 20

[node name="FireRate" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 190.0
margin_bottom = 42.0
dragger_visibility = 1

[node name="FireRateLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/FireRate"]
margin_right = 190.0
margin_bottom = 14.0
text = "Fire Rate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireRateSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/FireRate"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.0
step = 0.05
value = 0.35

[node name="Range" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 62.0
margin_right = 190.0
margin_bottom = 104.0
dragger_visibility = 1

[node name="RangeLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/Range"]
margin_right = 190.0
margin_bottom = 14.0
text = "Range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/Range"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 2.0
step = 0.05
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 124.0
margin_right = 190.0
margin_bottom = 166.0
dragger_visibility = 1

[node name="ScaleLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/Scale"]
margin_right = 190.0
margin_bottom = 14.0
text = "Scale"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/Scale"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 0.25
max_value = 2.0
step = 0.25
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shots" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 186.0
margin_right = 190.0
margin_bottom = 228.0
dragger_visibility = 1

[node name="ShotsLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/Shots"]
margin_right = 190.0
margin_bottom = 14.0
text = "Shots"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotsSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/Shots"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 10.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotsAngle" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 248.0
margin_right = 190.0
margin_bottom = 290.0
dragger_visibility = 1

[node name="ShotAngleLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/ShotsAngle"]
margin_right = 190.0
margin_bottom = 14.0
text = "Shot angle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotAngleSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/ShotsAngle"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 1.0
max_value = 6.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationDegree" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 310.0
margin_right = 190.0
margin_bottom = 352.0
dragger_visibility = 1

[node name="RotationDegreeLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/RotationDegree"]
margin_right = 190.0
margin_bottom = 14.0
text = "Rotation Degree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationDegreeSlider" type="HSlider" parent="PanelContainer/MarginContainer/Rows/RotationDegree"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 42.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -90.0
max_value = 90.0
step = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 372.0
margin_right = 190.0
margin_bottom = 422.0
dragger_visibility = 1

[node name="ScaleLabel" type="Label" parent="PanelContainer/MarginContainer/Rows/Color"]
margin_right = 190.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Rows/Color"]
margin_top = 26.0
margin_right = 190.0
margin_bottom = 50.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/MarginContainer/Rows/Color/HBoxContainer"]
margin_right = 105.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
toggle_mode = false
shortcut_in_tooltip = false
align = 0
color = Color( 1, 1, 1, 1 )

[node name="RainbowCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/Rows/Color/HBoxContainer"]
margin_left = 109.0
margin_right = 190.0
margin_bottom = 24.0
text = "Rainbow"

[node name="PixelEditor" type="VSplitContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 442.0
margin_right = 190.0
margin_bottom = 466.0
dragger_visibility = 1

[node name="CustomProjectileCheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/Rows/PixelEditor"]
margin_right = 190.0
margin_bottom = 24.0
text = "Custom Projectile"

[node name="PixelCanva" parent="PanelContainer/MarginContainer/Rows/PixelEditor" instance=ExtResource( 2 )]
position = Vector2( 302.007, 45.3965 )
scale = Vector2( 2, 2 )
z_index = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
position = Vector2( 112, 304 )
shape = SubResource( 8 )
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/FireRate/FireRateSlider" to="." method="_on_FireRateSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/Range/RangeSlider" to="." method="_on_RangeSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/Scale/ScaleSlider" to="." method="_on_ScaleSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/Shots/ShotsSlider" to="." method="_on_ShotsSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/ShotsAngle/ShotAngleSlider" to="." method="_on_ShotAngleSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/Rows/RotationDegree/RotationDegreeSlider" to="." method="_on_RotationDegreeSlider_value_changed"]
[connection signal="color_changed" from="PanelContainer/MarginContainer/Rows/Color/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/Rows/Color/HBoxContainer/RainbowCheckBox" to="." method="_on_RainbowCheckBox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/Rows/PixelEditor/CustomProjectileCheckBox" to="." method="_on_CustomProjectileCheckBox_toggled"]
